--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.5.4",
+    "classnames": "^2.5.1",
     "negotiator": "^0.6.3",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.1",
-    "sass": "^1.72.0"
+    "sass": "^1.72.0",
+    "swiper": "^11.0.7"
   },
   "devDependencies": {
     "@types/negotiator": "^0.6.3",
