--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   },
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.5.4",
+    "@reduxjs/toolkit": "^2.2.2",
+    "axios": "^1.6.8",
     "classnames": "^2.5.1",
     "negotiator": "^0.6.3",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.1",
+    "react-input-mask": "^2.0.4",
+    "react-redux": "^9.1.0",
+    "redux-persist": "^6.0.0",
     "sass": "^1.72.0",
     "swiper": "^11.0.7"
   },
@@ -24,6 +29,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-input-mask": "^3.0.5",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
